# PhotonPulse

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  index.html  my_first_scene.xml  run_tests.py
assets/js/: imagecomparison.js
blender_exporter/: .gitignore  CMakeLists.txt  README.md  build_plugin.bat  build_plugin.sh
blender_exporter/lightwave_blender/: __init__.py  addon_preferences.py  camera.py  defaults.py  exporter.py  exporter_ui.py  light.py  materials.py  node.py  node_graph.py  ply.py  registry.py  shape.py  transform.py  utils.py  world.py  xml_node.py
blender_exporter_task/: ball.xml  noisy.exr  test.xml
cmake/: SetupChecks.cmake  SetupFlags.cmake  SetupLTO.cmake  SetupSanitizers.cmake  SetupWarnings.cmake
features/: README.md
features/halton_sampling/: bunny_constant.xml  halton_sampler_with_64_samples.exr  independent_sampler_with_64_samples.exr
features/image_bloom/: bloomed_ref.exr  image_bloom.xml  non_bloomed.exr  raw.exr
features/image_denoising/: albedo.exr  denoised.exr  denoising.xml  noisy.exr  normal_image.exr
features/rough_dielectric/: roughdielectric_reflection.xml  roughdielectric_refraction.xml  roughroughdielectric_reflection.exr  roughroughdielectric_refraction.exr
features/shading_normals/: normalmap.xml  normalmap_ref.exr  normalmap_test.exr
features/thinlens/: ducks_test.exr  ducks_thinlens.xml
features/thinlens_camera/: ducks_thinlens.xml  thinlens_supercinematic_ducks.exr
include/: lightwave.hpp
include/lightwave/: bsdf.hpp  camera.hpp  color.hpp  core.hpp  emission.hpp  image.hpp  instance.hpp  integrator.hpp  iterators.hpp  light.hpp  logger.hpp  math.hpp  parallel.hpp  postprocess.hpp  properties.hpp  registry.hpp  sampler.hpp  scene.hpp  shape.hpp  streaming.hpp  test.hpp  texture.hpp  transform.hpp  warp.hpp
src/bsdfs/: conductor.cpp  dielectric.cpp  diffuse.cpp  fresnel.hpp  microfacet.hpp  principled.cpp  roughconductor.cpp  roughdielectric.cpp
src/cameras/: perspective.cpp  thinlens.cpp
src/core/: camera.cpp  image.cpp  instance.cpp  integrator.cpp  logger.cpp  main.cpp  math.cpp  parser.cpp  parser.hpp  plyparser.cpp  plyparser.hpp  properties.cpp  registry.cpp  scene.cpp  streaming.cpp  tinyexr.cpp  transform.cpp  xml.cpp  xml.hpp
src/denoise/: denoise.cpp
src/emissions/: lambertian.cpp
src/integrators/: albedo.cpp  bvh.cpp  camera.cpp  direct.cpp  normals.cpp  pathtracer.cpp
src/lights/: directional.cpp  envmap.cpp  point.cpp
src/postprocessing/: bloom.cpp
src/samplers/: halton.cpp  independent.cpp  pcg32.h  prime.h
src/shapes/: accel.hpp  group.cpp  mesh.cpp  rectangle.cpp  sphere.cpp
src/tests/: image.cpp
src/textures/: checkerboard.cpp  constant.cpp  image.cpp
tests/: .gitignore
tests/meshes/: binning.ply  icosphere.ply  sibenik.ply  uvquad.ply
tests/practical_1/: mesh_bunny.xml  mesh_bunny_flat.xml  mesh_bunny_flat_ref.exr  mesh_bunny_ref.exr  mesh_flat.xml  mesh_flat_ref.exr  mesh_inside.xml  mesh_inside_ref.exr  mesh_smooth.xml  mesh_smooth_ref.exr  perspective_120deg_rotated.xml  perspective_120deg_rotated_ref.exr  perspective_20deg.xml  perspective_20deg_ref.exr  perspective_90deg.xml  perspective_90deg_ref.exr  perspective_90deg_translated.xml  perspective_90deg_translated_ref.exr  sphere_inside.xml  sphere_inside_ref.exr  sphere_outside.xml  sphere_outside_ref.exr  sphere_scaled.xml  sphere_scaled_ref.exr  sphere_snowman.xml  sphere_snowman_ref.exr
tests/practical_2/: bunny_constant.xml  bunny_constant_ref.exr  bunny_image.xml  bunny_image_ref.exr  bvh_complex.xml  bvh_complex_ref.exr  bvh_simple.xml  bvh_simple_ref.exr  checkerboard.xml  checkerboard_ref.exr  ducks.xml  ducks_ref.exr  emission.xml  emission_ref.exr  emission_textured.xml  emission_textured_ref.exr  furnace.xml  furnace_ref.exr  image_modes.xml  image_modes_ref.exr
tests/practical_3/: conductor.xml  conductor_ref.exr  dielectric_reflection.xml  dielectric_reflection_ref.exr  dielectric_refraction.xml  dielectric_refraction_ref.exr  light_directional.xml  light_directional_ref.exr  light_point.xml  light_point_ref.exr  pathtracing_depth2.xml  pathtracing_depth2_ref.exr  pathtracing_depth5.xml  pathtracing_depth5_ref.exr  pathtracing_lights.xml  pathtracing_lights_ref.exr  principled_envmap.xml  principled_envmap_ref.exr  principled_light.xml  principled_light_ref.exr  pt_glass.xml  pt_glass_ref.exr  roughconductor.xml  roughconductor_ref.exr  terminator_bunny.xml  (+1 more)
website/: index.html
(+3 files in other folders)
